signup page and edit myaccount, edit customer page validation error resolved

--- a/src/app/editmy-account/editmy-account.component.html
+++ b/src/app/editmy-account/editmy-account.component.html
@@ -3,65 +3,95 @@
     <div class="row">
         <div class="col-sm-3"></div>
         <div class="col-sm-8">
-            <div class="row">
-                <div class="col-sm-5">
-                    <label for=name class="info">Name :</label>
-                    <p class="mandatory d-inline"> *</p>
+            <form [formGroup]='customerForm' (ngSubmit)="update()">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <label for=name class="info">Name :</label>
+                        <p class="mandatory d-inline"> *</p>
+                    </div>
+                    <div class="col-sm-7">
+                        <input id="name field-size" [ngClass]="{'invalid' : isValid('newlenderName')}"
+                            formControlName="newlenderName" [(ngModel)]="newlenderName" required>
+                        <div class="feedback" *ngIf="isValid('newlenderName')">
+                            <span *ngIf="customerForm.controls.newlenderName.errors.required">Field cannot be
+                                Empty!!!</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-7">
-                    <input id="name field-size" [(ngModel)]="newlenderName" required>
+                <br>
+                <div class="row">
+                    <div class="col-sm-5">
+                        <label for=shopName class="info">Shop-Name :</label>
+                        <p class="mandatory d-inline"> *</p>
+                    </div>
+                    <div class="col-sm-7">
+                        <input id="shopName" [ngClass]="{'invalid' : isValid('newlenderShopName')}"
+                            formControlName="newlenderShopName" [(ngModel)]="newlenderShopName" required>
+                        <div class="feedback" *ngIf="isValid('newlenderShopName')">
+                            <span *ngIf="customerForm.controls.newlenderShopName.errors.required">Field cannot be
+                                Empty!!!</span>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-sm-5">
-                    <label for=shopName class="info">Shop-Name :</label>
-                    <p class="mandatory d-inline"> *</p>
+                <br>
+                <div class="row">
+                    <div class="col-sm-5">
+                        <label for=phone class="info">Phone-No :</label>
+                        <p class="mandatory d-inline"> *</p>
+                    </div>
+                    <div class="col-sm-7">
+                        <input id="phone" type="number" [ngClass]="{'invalid' : isValid('newlenderPhone')}"
+                            formControlName="newlenderPhone" [(ngModel)]="newlenderPhone" pattern="[+0-9]{10}" required>
+                        <div class="feedback mobFeedback" *ngIf="isValid('newlenderPhone')">
+                            <span *ngIf="customerForm.controls.newlenderPhone.errors.required">Field cannot be
+                                Empty!!!</span>
+                            <span *ngIf="customerForm.controls.newlenderPhone.errors.pattern">Enter Valid Mobile Number
+                                of 10
+                                digits!</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-7">
-                    <input id="shopName" [(ngModel)]="newlenderShopName" required>
+                <br>
+                <div class="row">
+                    <div class="col-sm-5">
+                        <label for=lenderid class="info">Lender-Id :</label>
+                    </div>
+                    <div class="col-sm-7">
+                        <input id="lenderid" [(ngModel)]="newlenderId" [ngClass]="{'invalid' : isValid('newlenderId')}"
+                            formControlName="newlenderId" disabled>
+                        <div class="feedback" *ngIf="isValid('newlenderId')">
+                            <span *ngIf="customerForm.controls.newlenderId.errors.required">Field cannot be
+                                Empty!!!</span>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-sm-5">
-                    <label for=phone class="info">Phone-No :</label>
-                    <p class="mandatory d-inline"> *</p>
+                <br>
+                <div class="row">
+                    <div class="col-sm-5">
+                        <label for=lenderid class="info">Password :</label>
+                    </div>
+                    <div class="col-sm-7">
+                        <input type="password" id="lenderid" [ngClass]="{'invalid' : isValid('newpassword')}"
+                            formControlName="newpassword" [(ngModel)]="newpassword" disabled>
+                        <div class="feedback" *ngIf="isValid('newpassword')">
+                            <span *ngIf="customerForm.controls.newpassword.errors.required">Field cannot be
+                                Empty!!!</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-7">
-                    <input id="phone" [(ngModel)]="newlenderPhone" pattern="[+0-9]{10}" required>
+                <br>
+                <br>
+                <div class="row">
+                    <div class="col-4 text-center md">
+                        <a class="cancel" [routerLink]="['/myaccount']">
+                            Cancel </a>
+                    </div>
+                    <div class="col-4 btn-right text-right">
+                        <button [disabled]="!customerForm.valid" class="btn confirmBtn border border-dark"><a> Update
+                            </a></button>
+                    </div>
                 </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-sm-5">
-                    <label for=lenderid class="info">Lender-Id :</label>
-                </div>
-                <div class="col-sm-7">
-                    <input id="lenderid" [(ngModel)]="newlenderId" disabled>
-                </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-sm-5">
-                    <label for=lenderid class="info">Password :</label>
-                </div>
-                <div class="col-sm-7">
-                    <input type="password" id="lenderid" [(ngModel)]="newpassword" disabled>
-                </div>
-            </div>
-            <br>
-            <br>
-            <div class="row">
-                <div class="col-4 text-center md">
-                    <a class="cancel" [routerLink]="['/myaccount']">
-                        Cancel </a>
-                </div>
-                <div class="col-4 btn-right text-right">
-                    <button (click)="update()" [disabled]="!newlenderName || !newlenderShopName || !newlenderPhone"
-                        class="btn confirmBtn border border-dark"><a> Update </a></button>
-                </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
