--- a/src/app/edit-customer/edit-customer.component.html
+++ b/src/app/edit-customer/edit-customer.component.html
@@ -2,46 +2,61 @@
     <div class=" row">
         <div class="col-sm-2"></div>
         <div class="col-sm-10 block">
-
-            <br><br><br>
-            <div class="row">
-                <div class="col-sm-2 col-2 text-right">
-                    <i class='fa fa-user icon2 mt-1 ml-3'></i>
+            <form [formGroup]='customerForm' (ngSubmit)="onSubmit()">
+                <br><br><br>
+                <div class="row">
+                    <div class="col-sm-2 col-2 text-right">
+                        <i class='fa fa-user icon2 mt-1 ml-3'></i>
+                    </div>
+                    <div class="col-sm-3 lbl col-10">
+                        <label for="name" class="d-inline label">New Name</label>
+                        <p class="mandatory d-inline"> *</p>
+                    </div>
+                    <div class="col-sm-4 col-12">
+                        <input class="rounded w-100 inp" [ngClass]="{'invalid' : isValid('customerName')}"
+                            formControlName="customerName" type="text" id="name" name="name"
+                            placeholder="Enter New Name" [(ngModel)]="customerName">
+                        <div class="feedback" *ngIf="isValid('customerName')">
+                            <span *ngIf="customerForm.controls.customerName.errors.required">Field cannot be
+                                Empty!!!</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-3 lbl col-10">
-                    <label for="name" class="d-inline label">New Name</label>
-                    <p class="mandatory d-inline"> *</p>
+                <br>
+                <div class="row">
+                    <div class="col-sm-2 col-2 text-right">
+                        <i class="material-icons icon rounded-circle mt-1 ml-2">phone</i>
+                    </div>
+                    <div class="col-sm-3 lbl col-10">
+                        <label for="contact" class="d-inline label">New Mobile Number</label>
+                        <p class="mandatory d-inline"> *</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <input class="rounded w-100 inp" type="number"
+                            [ngClass]="{'invalid' : isValid('customerMobile')}" pattern="[+0-9]{10}" id="phone"
+                            name="phone" placeholder="Enter New Mobile Number" formControlName="customerMobile"
+                            [(ngModel)]="customerMobile" required>
+                        <div class="feedback mobFeedback" *ngIf="isValid('customerMobile')">
+                            <span *ngIf="customerForm.controls.customerMobile.errors.required">Field cannot be
+                                Empty!!!</span>
+                            <span *ngIf="customerForm.controls.customerMobile.errors.pattern">Enter Valid Mobile Number
+                                of 10
+                                digits!</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-4 col-12">
-                    <input class="rounded w-100 inp" type="text" id="name" name="name" placeholder="Enter New Name"
-                        [(ngModel)]="customerName">
+                <br><br><br>
+                <div class="row">
+                    <div class="col-5 text-center pt-2 cancel">
+                        <a class="logo-color" [routerLink]="['/home/customers']"><strong>Cancel</strong></a>
+                    </div>
+                    <div class="col-6  col-sm-4 text-right">
+                        <button type="submit"
+                            class="btn confirmBtn text-right border border-dark nav-item nav-link-edit"
+                            [disabled]="!customerForm.valid">Update</button>
+                    </div>
                 </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-sm-2 col-2 text-right">
-                    <i class="material-icons icon rounded-circle mt-1 ml-2">phone</i>
-                </div>
-                <div class="col-sm-3 lbl col-10">
-                    <label for="contact" class="d-inline label">New Mobile Number</label>
-                    <p class="mandatory d-inline"> *</p>
-                </div>
-                <div class="col-sm-4">
-                    <input class="rounded w-100 inp" type="text" id="phone" name="phone"
-                        placeholder="Enter New Mobile Number" [(ngModel)]="customerPhone" required>
-                </div>
-            </div>
-            <br><br><br>
-            <div class="row">
-                <div class="col-5 text-center pt-2 cancel">
-                    <a class="logo-color" [routerLink]="['/home/customers']"><strong>Cancel</strong></a>
-                </div>
-                <div class="col-6  col-sm-4 text-right">
-                    <button (click)='onSubmit()' type="submit"
-                        class="btn confirmBtn text-right border border-dark nav-item nav-link-edit" [disabled]="!customerName || !customerPhone" data-toggle="modal"
-                        data-target="#successModal">Update</button>
-                </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
