--- a/src/app/add-credit/add-credit.component.html
+++ b/src/app/add-credit/add-credit.component.html
@@ -36,14 +36,16 @@
                                     :</label>
                             </div>
                             <div class="col-sm-3">
-                                <select href="#" id="txnType" class="dropdown-toggle inp selectField btn w-100"
-                                    data-toggle="dropdown" role="button" required>
+                                <select href="#" id="txnType" [ngClass]="{'invalid' : isValid('txnType')}" class="dropdown-toggle inp selectField btn w-100"
+                                    data-toggle="dropdown" role="button" formControlName="txnType" required>
                                     <option value="" disabled selected>
                                         Select an Option
                                     </option>
                                     <option value="DEBIT">Credit Given</option>
                                     <option value="CREDIT">Cash Received</option>
                                 </select>
+                                <div class="feedback" *ngIf="isValid('txnType')">Select one transaction type
+                                </div>
                             </div>
                         </div>
                         <br>
@@ -59,10 +61,8 @@
                                 <input [ngClass]="{'invalid' : isValid('amount')}" class="rounded w-100"
                                     formControlName="amount" min="0" type="number" id="amount" placeholder="Amount"
                                     required>
-                                <div class="feedback" *ngIf="this.isNaN">Enter amount
-                                </div>
                                 <div class="feedback" *ngIf="isValid('amount')">
-                                    <span *ngIf="creditForm.controls.name.errors.required">Enter some money
+                                    <span *ngIf="creditForm.controls.amount.errors.required">Enter some money
                                         value!</span>
                                 </div>
                             </div>
@@ -71,14 +71,7 @@
                         <br><br>
                         <div class="col-sm-12 text-center">
                             <button id="save" type="submit" [disabled]="!creditForm.valid"
-                                class="btn confirmBtn border border-dark nav-item nav-link-edit">Save</button>
-                            <div class="feedback" *ngIf="this.selectTxn">Select one transaction type
-                            </div>
-                            <div class="feedback" *ngIf="this.isNaN">Enter amount
-                            </div>
-                            <div class="feedback" *ngIf="isValid('amount')">Input all required values before
-                                submitting
-                            </div>
+                                class="btn confirmBtn border border-dark">Save</button>
                         </div>
                     </form>
                 </div>
