--- a/src/app/eledger-login/eledger-login.component.html
+++ b/src/app/eledger-login/eledger-login.component.html
@@ -4,14 +4,13 @@
         <div class="col-sm-3"></div>
         <div class="col-sm-6">
             <div class="row">
-                <div class="col-sm-9">
+                <div class="col-9">
                     <h2 class="">
-                        <img src="../../assets/image1.png"> Login
+                        <img src="../../assets/image1.png">Login
                     </h2>
                 </div>
-                <div class="col-sm-3 text-right">
-                    <button class="btn confirmBtn border border-dark signUp" [routerLink]="['/sign-up']">SignUp
-                    </button>
+                <div class="col-3 text-right">
+                    <button class="btn confirmBtn border border-dark signUp" [routerLink]="['/sign-up']">SignUp</button>
                 </div>
             </div>
             <br><br>
@@ -43,7 +42,7 @@
                         input Id / Password !</span></div>
                 <br>
                 <div class="row">
-                    <div class="col-9 mt-2">
+                    <div class="col-9">
                         <span class=""><a class="logo-color" [routerLink]="['/forgot-password']">Forgot
                                 Password?</a></span>
                     </div>
