--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class=" row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8 block">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10 block">
 
             <br><br><br>
             <div class="row">
@@ -25,10 +25,13 @@
                         <label for="email" class="d-inline label"> Email ID</label>
                         <p class="mandatory d-inline"> *</p> :
                     </div>
-                    <div class="col-sm-5 col-12 col-md-4 inputDiv">
-                        <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('emailId')}" type="email"
-                            pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$" id="emailId"
+                    <div class="col-sm-5 col-12 col-md-4 inputDiv" (click)="isPresentEmail = false">
+                        <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('emailId') || isPresentEmail}"
+                            type="email" pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$" id="emailId"
                             placeholder=" Enter Email ID" formControlName="emailId">
+                        <div *ngIf="isPresentEmail" class="feedback">Email Not Exists!! Please use different
+                            Email ID
+                        </div>
                         <div class="feedback emailFeedback" *ngIf="isValid('emailId')">
                             <span *ngIf="resetForm.controls.emailId.errors.required">Field cannot be Empty!!!</span>
                             <span *ngIf="resetForm.controls.emailId.errors.pattern">Enter a Valid Email ID</span>
@@ -43,9 +46,8 @@
                         <a class="logo-color" [routerLink]="['/login']"><strong>Back to Login</strong></a>
                     </div>
                     <div class="col-sm-3 col-7 text-right">
-                        <button (click)='onSubmit()' type="submit"
-                            class="btn confirmBtn text-right border border-dark"
-                            [disabled]="!resetForm.valid" [routerLink]="['/login']">Reset</button>
+                        <button (click)='onSubmit()' type="submit" class="btn confirmBtn text-right border border-dark"
+                            [disabled]="!resetForm.valid">Reset</button>
                     </div>
                 </div>
             </form>
