Reset password complete implementation

--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -46,7 +46,7 @@
                         <a class="logo-color" [routerLink]="['/login']"><strong>Back to Login</strong></a>
                     </div>
                     <div class="col-sm-3 col-7 text-right">
-                        <button (click)='onSubmit()' type="submit" class="btn confirmBtn text-right border border-dark"
+                        <button type="submit" class="btn confirmBtn text-right border border-dark"
                             [disabled]="!resetForm.valid">Reset</button>
                     </div>
                 </div>
