--- a/src/app/resetpassword/resetpassword.component.html
+++ b/src/app/resetpassword/resetpassword.component.html
@@ -60,7 +60,7 @@
                 <div class="row text-center">
                     <div class="col-sm-1"></div>
                     <div class="col-sm-3 resend">
-                        <a style="color: #46afec;" [routerLink]="['/login']">Back to Login</a>
+                        <a style="color: #46afec;" [routerLink]="['/login']"><strong>Cancel</strong></a>
                     </div>
                     <div class="col-sm-5 text-center">
                         <button type="submit" [disabled]="!customerForm.valid"
