--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -6,7 +6,7 @@
             <br><br><br>
             <div class="row">
                 <div class="col-12 text-center">
-                    <h2><img class="logo mr-3" src="../../assets/image1.png" alt="logo">Forgot Password</h2>
+                    <h2><img [routerLink]="['/login']" class="logo mr-3" src="../../assets/image1.png" alt="logo">Forgot Password</h2>
 
                 </div>
                 <div class="col-sm-1 col-md-2"></div>
