--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -36,6 +36,16 @@
                 <div class="row">
                     <div class="col-sm-2 col-1"></div>
                     <div class="col-sm-3 col-4 data">
+                        <span class="info">Email</span>
+                    </div>
+                    <div class="col-2 data">:</div>
+                    <div class="col-5 data">
+                        <span>{{email}}</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-2 col-1"></div>
+                    <div class="col-sm-3 col-4 data">
                         <span class="info">Lender-Id</span>
                     </div>
                     <div class="col-2 data">:</div>
