--- a/src/app/home/reports/reports.component.css
+++ b/src/app/home/reports/reports.component.css
@@ -1,3 +1,15 @@
+.red {
+	color: rgb(243, 71, 71);
+}
+
+.green {
+	color: green;
+}
+
+.tx {
+	margin: auto;
+}
+
 tr:nth-child(even) {
 	background-color: #f0ebeb;
 }
