--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-2 text-right d-none d-sm-flex">
             <a (click)="goBack()">
-                <div class="hand back-btn"><strong>
+                <div *ngIf="!homeComponent()" class="hand back-btn"><strong>
                         < Back</strong>
                 </div>
             </a>
