--- a/src/app/editmy-account/editmy-account.component.html
+++ b/src/app/editmy-account/editmy-account.component.html
@@ -87,10 +87,10 @@
                     <div class="col-lg-1">
                     </div>
                     <div class="col-sm-5">
-                        <label for=lenderid class="info">Password :</label>
+                        <label for=newpassword class="info">Password :</label>
                     </div>
                     <div class="col-sm-7 col-lg-6">
-                        <input type="password" id="lenderid" [ngClass]="{'invalid' : isValid('newpassword')}"
+                        <input type="password" id="newpassword" [ngClass]="{'invalid' : isValid('newpassword')}"
                             formControlName="newpassword" [(ngModel)]="newpassword" disabled>
                         <div class="feedback" *ngIf="isValid('newpassword')">
                             <span *ngIf="customerForm.controls.newpassword.errors.required">Field cannot be
