--- a/src/app/add-credit/add-credit.component.html
+++ b/src/app/add-credit/add-credit.component.html
@@ -5,16 +5,16 @@
             <div class="row mt-2">
                 <div class="col-2"></div>
 
-                <div class="col-md-3 col-7 text-center fix logoColor border border-dark rounded align"> <i
+                <div class="col-md-4 col-lg-3 col-7 text-center fix logoColor border border-dark rounded align"> <i
                         class="fa fa-phone fa-flip-horizontal mr-1 icon" aria-hidden="true"></i><span class="val pb-1">
                         {{borrowerPhone}}</span>
                 </div>
-                <div class="col-md-2 col-2"></div>
-                <div class="col-md-2 col-7 text-center logoColor border fix border-dark rounded" *ngIf="balance>='0'"
+                <div class="col-md-1 col-2"></div>
+                <div class="col-md-2  col-lg-3 col-7 text-center logoColor border fix border-dark rounded" *ngIf="balance>='0'"
                     style="background-color: rgb(24, 170, 24); right: 16px;"> <span class="val">
                         <i class='fas fa-rupee-sign icon mt-1'></i>&nbsp; {{balance}}</span>
                 </div>
-                <div class="col-md-2 col-7 text-center logoColor border fix border-dark rounded" *ngIf="balance<'0'"
+                <div class="col-md-2 col-lg-3 col-7 text-center logoColor border fix border-dark rounded" *ngIf="balance<'0'"
                     style="background-color: #F44336; right: 16px;"> <span class="val">
                         <i class='fas fa-rupee-sign icon mt-1'></i>&nbsp; {{balance}}</span>
                 </div>
@@ -28,14 +28,14 @@
                 <div class="col-sm-12 text-center">
                     <form [formGroup]='creditForm' (ngSubmit)="onSubmit()">
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-1 col-md-2 col-lg-3">
                             </div>
-                            <div class="col-sm-3 label">
+                            <div class="col-sm-4 col-md-3 label">
                                 <label for="name" class="d-inline label">Credit
                                     type <p class="mandatory d-inline"> * </p>
                                     :</label>
                             </div>
-                            <div class="col-sm-3">
+                            <div class="col-sm-5 col-lg-3">
                                 <select href="#" id="txnType" [ngClass]="{'invalid' : isValid('txnType')}" class="dropdown-toggle inp selectField btn w-100"
                                     data-toggle="dropdown" role="button" formControlName="txnType" required>
                                     <option value="" disabled selected>
@@ -51,13 +51,13 @@
                         <br>
                         <br>
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-1 col-md-2 col-lg-3">
                             </div>
-                            <div class="col-sm-3 label">
+                            <div class="col-sm-4 col-md-3 label">
                                 <label for="amount" class="d-inline label"> Amount <p class="mandatory d-inline">* </p>
                                     :</label>
                             </div>
-                            <div class="col-sm-3">
+                            <div class="col-sm-5 col-lg-3">
                                 <input [ngClass]="{'invalid' : isValid('amount')}" class="rounded w-100"
                                     formControlName="amount" min="0" type="number" id="amount" placeholder="Amount"
                                     required>
