--- a/src/app/home/customers/customers.component.html
+++ b/src/app/home/customers/customers.component.html
@@ -87,7 +87,9 @@
                     <td data-label="Edit/Delete" class="edit">
 
                         <div class="row">
-                            <div class="col-2 edit-margin">
+                            <div class="col-7 col-md-3"></div>
+
+                            <div class="col-2">
                                 <a class="logo-color" [routerLink]="['/editcustomer']" (click)='sendData(customer)'><i
                                         class="fas fa-edit hand"></i></a>
                             </div>
